# bigsdbcli

./: .gitignore  README.rst  pyproject.toml
bigsdbcli/: BigsDBOAuth.py
bigsdbcli/configs/: config_test.toml
